# wayland-appusage

./: Cargo.toml  flake.nix  shell.nix
daemon/: Cargo.toml
daemon/src/: app.rs  main.rs  sway.rs
data/: appusage.service
src/: main.rs
tui-app/: Cargo.toml
tui-app/src/: db.rs  main.rs
