[package]
name = "wayland-appusage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
rusqlite = { version = "0.34.0", features = ["bundled"] }
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
